src/test/deca/context/invalid/class/double_class_declaration.deca
// Description:
//    Test de déclaration de la même classe 2 fois
//
//                                          (Rule 1.3)
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur
//    Context: erreur puisqu'on definit la même classe 2 fois ce qui est interdit par la regle 1.3
//
// Historique:
//    cree le 20/01/2022


    class A{
       int x, y;
    }
    class A{
       int x , y;
    }
{

}